WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132309
Scrollbars do not update properly when topContentInset changes dynamically
https://bugs.webkit.org/show_bug.cgi?id=132309
Summary
Scrollbars do not update properly when topContentInset changes dynamically
Beth Dakin
Reported
2014-04-28 16:03:00 PDT
Scrollbars do not update properly when topContentInset changes dynamically. <
rdar://problem/16642232
>
Attachments
Patch
(1.87 KB, patch)
2014-04-28 16:07 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-04-28 16:07:39 PDT
Created
attachment 230331
[details]
Patch
Tim Horton
Comment 2
2014-04-28 16:10:04 PDT
Comment on
attachment 230331
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=230331&action=review
> Source/WebCore/page/FrameView.cpp:962 > + // To fully update scrollbars, we need to call both updateScrolbars() and frameViewDidChangeSize() which will > + // will update all of the scrolling-related layers.
I don't think the comment is necessary.
> Source/WebCore/page/FrameView.cpp:964 > + if (RenderView* renderView = this->renderView()) {
We already have a local and already early returned for RenderView.
Beth Dakin
Comment 3
2014-04-28 16:19:47 PDT
Thank you!
http://trac.webkit.org/changeset/167911
Ryosuke Niwa
Comment 4
2014-04-28 18:23:46 PDT
Looks like this regressed PLT by ~2%
Beth Dakin
Comment 5
2014-04-28 20:24:21 PDT
(In reply to
comment #4
)
> Looks like this regressed PLT by ~2%
This seems very unlikely…
Ryosuke Niwa
Comment 6
2014-04-28 21:10:12 PDT
(In reply to
comment #5
)
> (In reply to
comment #4
) > > Looks like this regressed PLT by ~2% > > This seems very unlikely…
Yeah, looks like it was a temporary fluke. The numbers look better now.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug