Scrollbars do not update properly when topContentInset changes dynamically https://bugs.webkit.org/show_bug.cgi?id=132309 -and corresponding- <rdar://problem/16642232>

Reviewed by Tim Horton.

It is not sufficient to do a layout and call updateScrollbars(). We must also call
RenderLayerCompositor::frameViewDidChangeSize() in order to properly adjust the
size and position of all of the scrolling-related layers.
* page/FrameView.cpp:
(WebCore::FrameView::topContentInsetDidChange):



Canonical link: https://commits.webkit.org/150320@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167911 268f45cc-cd09-0410-ab3c-d52691b4dbfc