Source/WebCore/page/FrameView.cpp
@@ -956,10 +956,11 @@ void FrameView::topContentInsetDidChange()
     if (!renderView)
         return;
     
-    // FIXME: <rdar://problem/16642232> This call to updateScrollbars() is not actually sufficient to fix
-    // the scrollbars if the contentInset changes dynamically. 
     layout();
+
     updateScrollbars(scrollOffset());
+    if (renderView->usesCompositing())
+        renderView->compositor().frameViewDidChangeSize();
 }
     
 bool FrameView::hasCompositedContent() const
